Småfixar, börjat skriva om templates för nya skissen. Fixat några saker som assistent påpekade.

--- a/static/style.css
+++ b/static/style.css
@@ -9,6 +9,7 @@ body {
       }
 
       div.sidebar {
+        background-color: #fff;
         border-right: solid 1px #000;
         
         float: left;
@@ -40,7 +41,7 @@ body {
       }
 
       div.mainpage {
-        border: dotted 1px #000;
+        /*border: dotted 1px #000;*/
         width: 100%;
       }
 
