Mer prototyping och leker med SQLite datalager (inget seriöst här inte)

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,7 +9,7 @@
   <head>
     <title>Title goes here</title>
     <meta http-equiv="Content-Type" content="application/xhtml+xml; charset=utf-8"/>
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+	  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}"/>
   </head>
   <body>
     <div id="container">
